--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
 
             <com.mobileapp.doorbell.utils.MainScreenMenu
                 android:layout_width="wrap_content"
-                android:id="@+id/customer_menu"
+                android:id="@+id/main_menu"
                 android:layout_height="wrap_content"/>
 
         </LinearLayout>
